# petri

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
include/: giacomobergami_petri.h
include/giacomobergami/petri/: elementary_net.h  petri.h  reachability_graph.h
src/giacomobergami/petri/: elementary_net.cpp  petri.cpp  reachability_graph.cpp
